<resources>
    <string name="app_name">AnswerCard</string>

    <string name="title_name">答题卡识别</string>
    <string name="first_bar">图片识别</string>
    <string name="second_bar">数据处理</string>
    <string name="setting">设置</string>

    <string name="back_return">返回</string>
    
    <string name="FB_firstT">名称ID</string>
    <string name="FB_secondT">答案</string>
    <string name="FB_secondCheck">是否需要答案</string>
    <string name="FB_thirdCheck">是否识别学号</string>
    <string name="FB_fourthCheck">是否记录到数据库</string>

    <string name="DataBase_name">AnswersCard</string>


</resources>