<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FB_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/black"
        android:id="@+id/title_firstBar"
        app:layout_constraintHeight_percent="0.05">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/back_return"
            app:layout_constraintBottom_toBottomOf="parent">
            <ImageView
                android:id="@+id/img_back_return"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/back_return"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_return"
                android:theme="@style/TextView"
                app:layout_constraintLeft_toRightOf="@id/img_back_return"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"

            android:layout_height="match_parent"
            app:layoutDescription="@xml/fb_main_xml_constraintlayout_scene"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_bar"
                android:theme="@style/TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.motion.widget.MotionLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/title_firstBar"
        android:background="@color/white_sm"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/title_firstBar"
        app:layout_constraintHeight_percent="0.95"
        app:layout_constraintLeft_toLeftOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            app:layout_constraintLeft_toLeftOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/FB_isAnswersInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/black"
                        android:buttonTint="@color/white"
                        android:buttonTintMode="src_atop"
                        android:text="@string/FB_secondCheck"
                        android:textColor="@color/white"
                        android:theme="@style/TextView_Small" />

                    <LinearLayout
                        android:id="@+id/FB_secondInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/FB_secondT"
                            android:theme="@style/TextView_Small" />

                        <EditText
                            android:id="@+id/FB_answersInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="这里输入答案"
                            android:textColorHint="@color/white_sm" />
                    </LinearLayout>
                </LinearLayout>

                <CheckBox
                    android:id="@+id/FB_isDataBase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/FB_fourthCheck"
                    android:textColor="@color/white"
                    android:theme="@style/TextView_Small" />

                <LinearLayout
                    android:id="@+id/view_ndatabase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">
                    <CheckBox
                        android:id="@+id/FB_isStudentNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/white"
                        android:text="@string/FB_thirdCheck"
                        android:textColor="@color/white"
                        android:theme="@style/TextView_Small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/FB_firstT"
                        android:theme="@style/TextView_Small"/>

                    <EditText
                        android:id="@+id/FB_idInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="这里输入名称ID"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white_sm"
                        android:theme="@style/TextView_Small" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/FB_idInputTip"
                        android:orientation="vertical"/>

                </LinearLayout>


            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/FB_nextButton"
                android:text="继续"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.constraintlayout.widget.ConstraintLayout>